conditionals show/hide products

--- a/restaurant-site-dynamic/index.html
+++ b/restaurant-site-dynamic/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <article id="logo">
-       <i class="fa fa-cutlery" aria-hidden="true"></i></article>
+       <i class="fa fa-cutlery" aria-hidden="true"> Петроград</i></article>
     <ul id="nav">
         <li class="navlink"><a href="#">menu</a></li>
         <li class="navlink"><a href="#">filter</a></li>
@@ -38,7 +38,7 @@
     <ul>
     <li class="price">Price:</li>
     <li class="discount">Discount:</li>
-    <li class="sold">Soldout:</li>
+    <li class="soldout"></li>
   </ul>
 
     <div id="icons">
