calculate price js

--- a/restaurant-site-dynamic/index.html
+++ b/restaurant-site-dynamic/index.html
@@ -36,9 +36,10 @@
     
     <p class="about"> </p>
     <ul>
-    <li class="price">Price:</li>
-    <li class="discount">Discount:</li>
+    <li class="price"></li>
+    <li class="discount"></li>
     <li class="soldout"></li>
+    <li class = "sale"></li>
   </ul>
 
     <div id="icons">
