images added from api

--- a/restaurant-site-dynamic/index.html
+++ b/restaurant-site-dynamic/index.html
@@ -30,7 +30,7 @@
 <template id="products-template">
   <section>
     <h3></h3>
-    <img src="https://www.thoughtco.com/thmb/mXLVWlmNXLznrTC299KGFQbq_SA=/3437x2578/smart/filters:no_upscale()/dining-table-with-russian-dishes-688352556-5c25409646e0fb00016abb57.jpg" alt=""> 
+   <img class="product-img" src="https://kea-alt-del.dk/t5/site/imgs/medium/ringbroed-druer-md.jpg" alt="some-russian-dish">
    
     
     <p class="about"> </p>
