--- a/restaurant-site-dynamic/index.html
+++ b/restaurant-site-dynamic/index.html
@@ -44,9 +44,10 @@
     <div class="icons">
       <i id="allergen">A</i>
       <i id="vegetarian" class="fa fa-leaf" aria-hidden="true"></i>
-      <i id="alcohol" class="fa fa-glass" aria-hidden="true"></i>
-        <button class="expand"><i class="fa fa-caret-down" aria-hidden="true"> see more</i></button>
-      </div>
+      <i id="alcohol" class="fa fa-glass" aria-hidden="true"></i> </div>
+
+      <div> <button class="expand"><i class="fa fa-caret-down" aria-hidden="true"> see more</i></button></div> 
+     
 
      <div class="description">
       <p class="a">A-Alergens</p><i  class="fa fa-leaf" aria-hidden="true">-Vegetarian Friendly</i> <br>
