semi-working colapssible JS

--- a/restaurant-site-dynamic/index.html
+++ b/restaurant-site-dynamic/index.html
@@ -14,9 +14,9 @@
     <article id="logo">
        <i class="fa fa-cutlery" aria-hidden="true"> Петроград</i></article>
     <ul id="nav">
-        <li class="navlink"><a href="#">menu</a></li>
-        <li class="navlink"><a href="#">filter</a></li>
-        <li class="navlink"><a href="#">about</a></li>
+        <li class="navlink"><a href="#"></a></li>
+        <li class="navlink"><a href="#"></a></li>
+        <li class="navlink"><a href="#"></a></li>
     </ul>
     <div id="burger">
         <i class="fa fa-bars" aria-hidden="true"></i>
@@ -24,7 +24,6 @@
 </header>
 
   <main>
-    <!-- make grid here CSS --->
   </main>
   
 <template id="products-template">
@@ -50,9 +49,7 @@
      
 
      <div class="description">
-      <p class="a">A-Alergens</p><i  class="fa fa-leaf" aria-hidden="true">-Vegetarian Friendly</i> <br>
-      <i class="fa fa-glass" aria-hidden="true">-Contains Alcohol</i> 
-      <p class = "text-dscrp"></p>
+      <p class = "long-description">ABCDE</p>
       </div>  
     
   </section>
