--- a/restaurant-site-dynamic/index.html
+++ b/restaurant-site-dynamic/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <header>
-    <article id="logo">
-       <i class="fa fa-cutlery" aria-hidden="true"> Петроград</i></article>
+    <p id="logo">
+       <i class="fa fa-cutlery" aria-hidden="true"> Петроград</i></p>
       
     
     <ul id="nav">
