style change CSS

--- a/restaurant-site-dynamic/index.html
+++ b/restaurant-site-dynamic/index.html
@@ -26,7 +26,8 @@
 </header>
 <details>
   <summary>FILTERS</summary>
-  <button id="veg-filter">vegetarian</button>
+  <button id="veg-filter"> vegetarian</button>
+  <button id="alcohol">has alcohol</button>
 </details>
 
   <main>
@@ -36,6 +37,7 @@
   <section>
    <article>
     <h3></h3>
+   
    <img class="product-img" src="https://kea-alt-del.dk/t5/site/imgs/medium/ringbroed-druer-md.jpg" alt="some-russian-dish">
    
   
@@ -44,23 +46,23 @@
 
 
     <p class="about"> </p>
-    <ul>
+    <ul class="list">
+      <li class="soldout"> </li>
     <li class="price"></li>
     <li class="discount"></li>
-    <li class="soldout"></li>
     <li class = "sale"></li>
   </ul>
 
     <div class="icons">
-      <i id="allergen">A</i>
-      <i id="vegetarian" class="fa fa-leaf" aria-hidden="true"></i>
-      <i id="alcohol" class="fa fa-glass" aria-hidden="true"></i> </div>
+      <i class="allergen">A</i>
+      <i  class="vegetarian fa fa-leaf" aria-hidden="true"></i>
+      <i  class="alcohol fa fa-glass" aria-hidden="true"></i> </div>
 
-      <div> <button class="expand"><i class="fa fa-caret-down" aria-hidden="true"> see more</i></button></div> 
+       <button class="expand"><i class="fa fa-caret-down" aria-hidden="true"> see more</i></button>
      
 
      <div class="description">
-      <p>ABCDE</p>
+      <p></p>
       </div>  
     </article>
   </section>
