console logs cleares

--- a/restaurant-site-dynamic/index.html
+++ b/restaurant-site-dynamic/index.html
@@ -55,7 +55,7 @@
         <div class="icons">
           <i class="allergen">A</i>
           <i class="vegetarian fa fa-leaf" aria-hidden="true"></i>
-          <i class="alcohol fa fa-glass" aria-hidden="true"></i> </div>
+          <i class="glass fa fa-glass" aria-hidden="true"></i> </div>
 
         <button class="expand"><i class="fa fa-caret-down" aria-hidden="true"> see more</i></button>
 
