--- a/restaurant-petrograd/index.html
+++ b/restaurant-petrograd/index.html
@@ -26,7 +26,7 @@
     </div>
   </header>
   <details>
-    <summary>FILTER BY</summary>
+    <summary>FILTER</summary>
     <button id="veg-filter">vegetarian</button>
     <button id="non-alc-filter">no alcohol</button>
   </details>
